# learn_in_depth_workspace

./: Learn In Depth - Shortcut.lnk  README.md
C/.metadata/: version.ini
C/homework_1/: .cproject  .project  main.c
C/homework_2/: main.c
C/homework_3_array/: .cproject
C/homework_3_strings/: .cproject
C/homework_4_functions/: .cproject  .project
C/homework_5_structures/: .project  ex_4.c
C/homework_6_pointers/: ex_2.c  ex_4.c  ex_5.c
C/test_c/: .cproject
unit_2_c/.metadata/: version.ini
unit_2_c/homework_2/: .cproject  .project
unit_2_c/homework_3_array/: .project  main.c
unit_2_c/homework_3_strings/: .project
unit_2_c/homework_5_structures/: .cproject  ex_1.c  ex_2.c  ex_5.c  ex_6.c
unit_2_c/homework_6_pointers/: .cproject  .project  ex_1.c  ex_3.c  main.c
unit_2_c/test_c/: main.c
unit_3_embedded_c/.metadata/: .log4j.xml  version.ini
unit_3_embedded_c/lec1/: platform_types.h
unit_3_embedded_c/lec2/: Makefile  main.c  (+7 more)
unit_5/proj_2_student_manage_system/: CMakeLists.txt  main.c  student management system report.docx  students.txt
unit_5/proj_2_student_manage_system/app/: input_output.c  input_output.h  navigator.c  navigator.h  sceen_addStudent.c  sceen_countStudents.c  sceen_findStudent.c  sceen_home.c  sceen_searchCourseId.c  sceen_showAll.c  sceen_updateStudents.c  screen_deleteStudent.c  screen_splash.c
unit_5/proj_2_student_manage_system/data/: linked_list.c  linked_list.h
unit_5/proj_2_student_manage_system/file_io/: file_io.c  file_io.h
unit_5/proj_2_student_manage_system/shared/: debug.h  delay_ms.c  delay_ms.h  models.h
(+306 files in other folders)
